// Vitest Snapshot v1

exports[`Pagination > 2 elements, first is current 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt dlUnJU"
    >
      <div
        class="sc-dkzDqf hjJIeP"
        cursor="default"
      >
        &lt;
      </div>
      <div
        class="sc-dkzDqf fpkzJG"
        cursor="pointer"
      >
        <strong>
          1
        </strong>
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        2
      </div>
    </div>
  </div>
</body>
`;

exports[`Pagination > 2 elements, second is current 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt dlUnJU"
    >
      <div
        class="sc-dkzDqf hjJIeP"
        cursor="default"
      >
        &lt;
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        1
      </div>
      <div
        class="sc-dkzDqf fpkzJG"
        cursor="pointer"
      >
        <strong>
          2
        </strong>
      </div>
    </div>
  </div>
</body>
`;

exports[`Pagination > subset of pages showing, showing lastpages 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt dlUnJU"
    >
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        &lt;
      </div>
      <div
        class="sc-dkzDqf fpkzJG"
        cursor="pointer"
      >
        <strong>
          6
        </strong>
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        7
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        8
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        9
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        10
      </div>
    </div>
  </div>
</body>
`;

exports[`Pagination > subset of pages showing, showing middle pages 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt dlUnJU"
    >
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        &lt;
      </div>
      <div
        class="sc-dkzDqf fpkzJG"
        cursor="pointer"
      >
        <strong>
          3
        </strong>
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        4
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        5
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        6
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        7
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        &gt;
      </div>
    </div>
  </div>
</body>
`;

exports[`Pagination > subset of pages showing, starting at beginning 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ sc-gsnTZi bTcrmt dlUnJU"
    >
      <div
        class="sc-dkzDqf hjJIeP"
        cursor="default"
      >
        &lt;
      </div>
      <div
        class="sc-dkzDqf fpkzJG"
        cursor="pointer"
      >
        <strong>
          1
        </strong>
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        2
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        3
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        4
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        5
      </div>
      <div
        class="sc-dkzDqf iGumvi"
        cursor="pointer"
      >
        &gt;
      </div>
    </div>
  </div>
</body>
`;
